--- a/package.json
+++ b/package.json
@@ -1,6 +1,25 @@
 {
   "dependencies": {
     "discord.js": "^13.6.0",
-    "dotenv": "^16.0.0"
-  }
+    "dotenv": "^16.0.0",
+    "nodemon": "^2.0.15"
+  },
+  "name": "heckerbot",
+  "description": "",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gzemel/HeckerBot.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/gzemel/HeckerBot/issues"
+  },
+  "homepage": "https://github.com/gzemel/HeckerBot#readme"
 }
