--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "dependencies": {
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "sequelize": "^6.17.0",
+    "sequentialize": "^1.0.1",
+    "sqlite3": "^5.0.2"
   },
   "name": "heckerbot",
   "description": "",
