--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
   "dependencies": {
+    "@quick.eco/sqlite": "^1.0.4",
+    "ascii-table": "^0.0.9",
+    "axios": "^0.26.0",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
+    "eco": "^1.1.0-rc-3",
+    "esm": "^3.2.25",
+    "ms": "^2.1.3",
     "nodemon": "^2.0.15",
+    "parse-ms": "^3.0.0",
+    "quick.db": "^7.1.3",
+    "quick.eco": "^6.0.0",
     "sequelize": "^6.17.0",
     "sequentialize": "^1.0.1",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^4.2.0"
   },
   "name": "heckerbot",
   "description": "",
