--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "quick.eco": "^6.0.0",
     "sequelize": "^6.17.0",
     "sequentialize": "^1.0.1",
+    "shuffle-array": "^1.0.1",
     "sqlite3": "^4.2.0"
   },
   "name": "heckerbot",
