--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@quick.eco/sqlite": "^1.0.4",
     "ascii-table": "^0.0.9",
     "axios": "^0.26.0",
+    "discord-blackjack": "^4.0.0",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
     "eco": "^1.1.0-rc-3",
